# handwrite_dataset_generator

./: 0_run_all.sh  1_gen_work_dir.py  2_run_preprocess.sh  3_gen_digit_data_label.py  LICENSE  README.md
BoxExtraction/: main.cpp
CutEdge/: CMakeLists.txt  main.cpp
DisplayImage/: main.cpp
backup_form/: box.docx  box_compo.doc  box_mid_size.docx  box_rec.doc  box_small.docx
img/: 0001.tiff  0002.tiff  0003.tiff  0004.tiff
mid_process/: 7_box.tiff  7_cropped.tiff
